<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/name"
        android:textSize="25sp"
        android:layout_marginStart="28dp"
        android:textAlignment="textStart"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        app:helperText="@string/req"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:startIconDrawable="@drawable/phone"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error"
        app:helperTextTextColor="#740B0B"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_margin="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="phone"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/pass"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:helperText="@string/req"
        app:helperTextTextColor="#740B0B"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput"
        app:startIconDrawable="@drawable/lock">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
   <Button
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        android:layout_margin="30dp"
        android:text="@string/log"
       android:onClick="confirm"
        android:textSize="20sp"
       />
    <Button
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Your Password"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/log"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/create"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:autoSizeTextType="uniform"
        android:textSize="5sp"
        android:text="@string/acc"
        android:onClick="createAccount"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/forget" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>