<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pincodeNew"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pincode"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/error"
            app:helperText="@string/req"
            app:helperTextTextColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pincode"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/verify"
            android:textAllCaps="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/pincodeNew"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart_view"
        android:layout_below="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>