<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.VoteFragment">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:completionThreshold="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:hintEnabled="true"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperText="@string/req"
        app:boxStrokeColor="@color/design_default_color_primary"
        app:boxStrokeErrorColor="@color/red"
        app:errorIconDrawable="@drawable/error"
        android:hint="Please Select Your Candidate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <AutoCompleteTextView
            android:id="@+id/spinner1"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/Verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Verification"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="165dp" />
    <Button
        android:id="@+id/Vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vote"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/Verification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>