<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity2">
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:id="@+id/regis"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/Reg"
           android:textAlignment="center"
           android:textSize="24sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/userName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/regis"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           app:counterEnabled="true"
           app:counterMaxLength="30"
           app:startIconDrawable="@drawable/account"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="@string/userName">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/user"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="30"
               android:inputType="textPersonName" />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/fatherName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/userName"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           app:counterEnabled="true"
           app:counterMaxLength="30"
           app:startIconDrawable="@drawable/account"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="@string/fatherName">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/father"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="30"
               android:inputType="textPersonName"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/birth"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/fatherName"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           app:startIconDrawable="@drawable/date"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="@string/dob">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/bob"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="none"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/gender"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/birth"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           app:startIconDrawable="@drawable/iden"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
           android:hint="Gender">
           <AutoCompleteTextView
               android:id="@+id/gen"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="none"
               android:layout_weight="1"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/pin"
           android:layout_width="170dp"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/gender"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           android:hint="@string/pincode"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           app:counterEnabled="true"
           app:counterMaxLength="6">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/pincode"
               android:layout_width="170dp"
               android:layout_height="wrap_content"
               android:maxLength="6"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <Button
           android:id="@+id/stateList"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginEnd="5dp"
           android:text="Verify Pincode"
           android:textAllCaps="false"
           app:layout_constraintBaseline_toBaselineOf="@+id/pin"
           app:layout_constraintEnd_toEndOf="parent" />
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/District"
           android:layout_width="160dp"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/pin"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="District">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/dis"
               android:layout_width="160dp"
               android:layout_height="wrap_content"
               android:inputType="none"
               android:layout_weight="1"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/state"
           android:layout_width="170dp"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/pin"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="State">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/sta"
               android:layout_width="170dp"
               android:layout_height="wrap_content"
               android:inputType="none"
               android:layout_weight="1"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/Block"
           android:layout_width="160dp"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/District"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="Block">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/blo"
               android:layout_width="160dp"
               android:layout_height="wrap_content"
               android:inputType="none"
               android:layout_weight="1" />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/Area"
           android:layout_width="170dp"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/state"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
           android:hint="Area">
           <AutoCompleteTextView
               android:id="@+id/are"
               android:layout_width="170dp"
               android:layout_height="wrap_content"
               android:inputType="none" />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/MobileNumber"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/Block"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           app:counterEnabled="true"
           app:counterMaxLength="10"
           app:startIconDrawable="@drawable/phone"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="@string/MobileNumber">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/mobile"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="number"
               android:maxLength="10"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/aadharNumber"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/MobileNumber"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           app:counterEnabled="true"
           app:counterMaxLength="12"
           app:startIconDrawable="@drawable/card"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="@string/AadhaarNumber">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/aadhar"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="number"
               android:maxLength="12" />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/VoterId"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/aadharNumber"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           app:counterEnabled="true"
           app:counterMaxLength="12"
           app:startIconDrawable="@drawable/card"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="@string/voter">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/voter"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="number"
               android:maxLength="12" />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/EnterPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/VoterId"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           app:counterEnabled="true"
           app:counterMaxLength="16"
           app:passwordToggleEnabled="true"
           app:startIconDrawable="@drawable/lock"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="@string/pass">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"
               android:maxLength="16" />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/confirmPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/EnterPassword"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="5dp"
           app:helperText="@string/req"
           app:helperTextTextColor="@color/red"
           app:errorEnabled="true"
           app:errorIconDrawable="@drawable/error"
           app:counterEnabled="true"
           app:counterMaxLength="16"
           app:passwordToggleEnabled="true"
           app:startIconDrawable="@drawable/lock"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="@string/confirm">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/con_pass"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"
               android:maxLength="16" />
       </com.google.android.material.textfield.TextInputLayout>
       <Button
           android:id="@+id/Register"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginRight="25sp"
           android:text="@string/Regis"
           android:textAllCaps="false"
           android:layout_marginTop="10dp"
           app:layout_constraintTop_toBottomOf="@id/confirmPassword"
           app:layout_constraintEnd_toEndOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>